updated the swagger
