# GitHubAction/DeployArtifactApi/Generated/DeployArtifactAPI.cs
@@ -311,7 +311,7 @@ namespace DeployArtifactApi.Generated
             };
             CustomInitialize();
         }
-        /// <param name='artifactId'>
+        /// <param name='body'>
         /// The artifact Id
         /// </param>
         /// <param name='ocpApimSubscriptionKey'>
@@ -338,11 +338,11 @@ namespace DeployArtifactApi.Generated
         /// <return>
         /// A response object containing the response body and response headers.
         /// </return>
-        public async Task<HttpOperationResponse<DeploymentModel>> DeployArtifactWithApiKeyFunctionWithHttpMessagesAsync(string artifactId, string ocpApimSubscriptionKey, Dictionary<string, List<string>> customHeaders = null, CancellationToken cancellationToken = default(CancellationToken))
+        public async Task<HttpOperationResponse<DeploymentModel>> DeployArtifactWithApiKeyFunctionWithHttpMessagesAsync(DeployArtifactAsSystemForm body, string ocpApimSubscriptionKey, Dictionary<string, List<string>> customHeaders = null, CancellationToken cancellationToken = default(CancellationToken))
         {
-            if (artifactId == null)
+            if (body == null)
             {
-                throw new ValidationException(ValidationRules.CannotBeNull, "artifactId");
+                throw new ValidationException(ValidationRules.CannotBeNull, "body");
             }
             if (ocpApimSubscriptionKey == null)
             {
@@ -355,7 +355,7 @@ namespace DeployArtifactApi.Generated
             {
                 _invocationId = ServiceClientTracing.NextInvocationId.ToString();
                 Dictionary<string, object> tracingParameters = new Dictionary<string, object>();
-                tracingParameters.Add("artifactId", artifactId);
+                tracingParameters.Add("body", body);
                 tracingParameters.Add("ocpApimSubscriptionKey", ocpApimSubscriptionKey);
                 tracingParameters.Add("cancellationToken", cancellationToken);
                 ServiceClientTracing.Enter(_invocationId, this, "DeployArtifactWithApiKeyFunction", tracingParameters);
@@ -363,15 +363,6 @@ namespace DeployArtifactApi.Generated
             // Construct URL
             var _baseUrl = BaseUri.AbsoluteUri;
             var _url = new System.Uri(new System.Uri(_baseUrl + (_baseUrl.EndsWith("/") ? "" : "/")), "key-artifact-deploy/v1-0/private/deploy").ToString();
-            List<string> _queryParameters = new List<string>();
-            if (artifactId != null)
-            {
-                _queryParameters.Add(string.Format("artifactId={0}", System.Uri.EscapeDataString(artifactId)));
-            }
-            if (_queryParameters.Count > 0)
-            {
-                _url += "?" + string.Join("&", _queryParameters);
-            }
             // Create HTTP transport objects
             var _httpRequest = new HttpRequestMessage();
             HttpResponseMessage _httpResponse = null;
@@ -402,6 +393,12 @@ namespace DeployArtifactApi.Generated
 
             // Serialize Request
             string _requestContent = null;
+            if(body != null)
+            {
+                _requestContent = SafeJsonConvert.SerializeObject(body, SerializationSettings);
+                _httpRequest.Content = new StringContent(_requestContent, System.Text.Encoding.UTF8);
+                _httpRequest.Content.Headers.ContentType =System.Net.Http.Headers.MediaTypeHeaderValue.Parse("application/json; charset=utf-8");
+            }
             // Set Credentials
             if (Credentials != null)
             {
