# GitHubAction/DeployArtifactApi/Generated/Models/DeployArtifactAsSystemForm.cs
@@ -1,0 +1,42 @@
+// <auto-generated>
+// Code generated by Microsoft (R) AutoRest Code Generator.
+// Changes may cause incorrect behavior and will be lost if the code is
+// regenerated.
+// </auto-generated>
+
+namespace DeployArtifactApi.Generated.Models
+{
+    using Newtonsoft.Json;
+    using System.Linq;
+
+    public partial class DeployArtifactAsSystemForm
+    {
+        /// <summary>
+        /// Initializes a new instance of the DeployArtifactAsSystemForm class.
+        /// </summary>
+        public DeployArtifactAsSystemForm()
+        {
+            CustomInit();
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the DeployArtifactAsSystemForm class.
+        /// </summary>
+        public DeployArtifactAsSystemForm(string artifactId = default(string))
+        {
+            ArtifactId = artifactId;
+            CustomInit();
+        }
+
+        /// <summary>
+        /// An initialization method that performs custom operations like setting defaults
+        /// </summary>
+        partial void CustomInit();
+
+        /// <summary>
+        /// </summary>
+        [JsonProperty(PropertyName = "artifactId")]
+        public string ArtifactId { get; set; }
+
+    }
+}
